@@ -34,6 +34,7 @@
 	packet... hrm. already scanning output for \e, could add an extra
 	byte to it for message
 - could use bsearch all over the place
+- better errors when creating new windows/sessions (how?)
 
 -- For 0.1 --------------------------------------------------------------------
 - man page
@@ -49,6 +50,7 @@
 	set status on/off
 	set meta
 	set shell
+	list-keys (list key bindings)
 - fix resize (width problems with multiple clients?)
 - handle tmux in tmux (check $TMUX and abort)
 - check for some reqd terminfo caps on startup
