@@ -1,4 +1,4 @@
-/* $Id: client-fn.c,v 1.1 2007-10-03 10:18:31 nicm Exp $ */
+/* $Id: client-fn.c,v 1.2 2007-10-03 12:34:16 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -62,6 +62,23 @@ client_write_server(
 	hdr.type = type;
 	hdr.size = len;
 	buffer_write(cctx->srv_out, &hdr, sizeof hdr);
-	if (len > 0)
+
+	if (buf != NULL)
 		buffer_write(cctx->srv_out, buf, len);
+}
+
+void
+client_write_server2(struct client_ctx *cctx,
+    enum hdrtype type, void *buf1, size_t len1, void *buf2, size_t len2)
+{
+	struct hdr	hdr;
+
+	hdr.type = type;
+	hdr.size = len1 + len2;
+	buffer_write(cctx->srv_out, &hdr, sizeof hdr);
+
+	if (buf1 != NULL)
+		buffer_write(cctx->srv_out, buf1, len1);
+	if (buf2 != NULL)
+		buffer_write(cctx->srv_out, buf2, len2);
 }
