@@ -1,4 +1,4 @@
-/* $Id: server-fn.c,v 1.12 2007-10-03 10:18:32 nicm Exp $ */
+/* $Id: server-fn.c,v 1.13 2007-10-03 12:34:16 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -230,6 +230,8 @@ server_write_message(struct client *c, const char *fmt, ...)
 	va_start(ap, fmt);
 	xvasprintf(&msg, fmt, ap);
 	va_end(ap);
+	if (strlen(msg) > c->sx - 1)
+		msg[c->sx - 1] = '\0';
 	buffer_write(c->out, msg, strlen(msg));
 	for (i = strlen(msg); i < c->sx; i++)
 		input_store8(c->out, ' ');
