@@ -1,5 +1,6 @@
 03 October 2007
 
+* (nicm) String number arguments. So you can do: tmux bind ^Q create "blah".
 * (nicm) Key binding. tmux bind key command [argument] and tmux unbind key.
   Key names are in a table in key-string.c, plus A is A, ^A is ctrl-A.
   Possible commands are in cmd.c (look at cmd_bind_table).
@@ -98,5 +99,5 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.24 2007-10-03 11:26:33 nicm Exp $
+$Id: CHANGES,v 1.25 2007-10-03 12:34:16 nicm Exp $
 
